--- a/src/main/webapp/WEB-INF/templates/admin/customer.html
+++ b/src/main/webapp/WEB-INF/templates/admin/customer.html
@@ -17,7 +17,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Danh sách khách hàng</h1>
+                <h1 class="mt-4">List of customers</h1>
                 <div class="card mb-4">
                     <div class="card-header">
                     </div>
@@ -25,19 +25,16 @@
                         <table id="datatablesSimple">
                             <thead>
                             <tr style="background-color: gray !important;">
-                                <th>STT</th>
-                                <th>Họ tên</th>
+                                <th>NO</th>
+                                <th>Fullname</th>
                                 <th>Email</th>
-                                <th>Số điện thoại</th>
+                                <th>PhoneNumber</th>
 
                             </tr>
                             </thead>
                             <tfoot>
                             <tr>
-                                <th>Full Name</th>
-                                <th>Email</th>
-                                <th>Phone Number</th>
-                                <th>UserName</th>
+
                             </tr>
                             </tfoot>
                             <tbody>
