--- a/src/main/webapp/WEB-INF/templates/admin/login.html
+++ b/src/main/webapp/WEB-INF/templates/admin/login.html
@@ -18,20 +18,20 @@
         <div class="row justify-content-center">
           <div class="col-lg-5">
             <div class="card shadow-lg border-0 rounded-lg mt-5">
-              <div class="card-header"><h3 class="text-center font-weight-light my-4">Đăng nhập quản trị</h3></div>
+              <div class="card-header"><h3 class="text-center font-weight-light my-4">Administrators</h3></div>
               <div class="card-body">
                 <form name='f' th:action="@{/auth/login}" method='POST'>
                   <div class="form-floating mb-3">
                     <input class="form-control" id="inputEmail" name="username" type="text" placeholder="Tài khoản" />
-                    <label for="inputEmail">Tài khoản</label>
+                    <label for="inputEmail">Username</label>
                   </div>
                   <div class="form-floating mb-3">
                     <input class="form-control" id="inputPassword" name="password" type="password" placeholder="Mật khẩu" />
-                    <label for="inputPassword">Mật khẩu</label>
+                    <label for="inputPassword">Password</label>
                   </div>
                   <p style="color: red" th:utext="${error}"></p>
                   <div class="d-flex align-items-center justify-content-between mt-4 mb-0" >
-                    <button class="btn btn-primary" style="margin: 0px auto !important;" type="submit">Đăng nhập</button>
+                    <button class="btn btn-primary" style="margin: 0px auto !important;" type="submit">Login</button>
                   </div>
                 </form>
               </div>
