--- a/src/main/webapp/WEB-INF/templates/public/allProduct.html
+++ b/src/main/webapp/WEB-INF/templates/public/allProduct.html
@@ -213,7 +213,7 @@
           <div class="noidungheader text-white">
             <i class="fa fa-bars"></i>
             <span class="text-uppercase font-weight-bold ml-1">
-Product portfolio</span>
+Category Product</span>
           </div>
           <!-- CATEGORIES -->
           <div class="categorycontent">
