--- a/src/main/webapp/WEB-INF/templates/public/detail.html
+++ b/src/main/webapp/WEB-INF/templates/public/detail.html
@@ -216,7 +216,7 @@
         <div class="categoryheader">
           <div class="noidungheader text-white">
             <i class="fa fa-bars"></i>
-            <span class="text-uppercase font-weight-bold ml-1">Product portfolio</span>
+            <span class="text-uppercase font-weight-bold ml-1">Category Product</span>
           </div>
           <!-- CATEGORIES -->
           <div class="categorycontent">
@@ -303,7 +303,7 @@
                 </div>
               </div>
               <div class="uudai my-3">
-                <h6 class="header font-weight-bold">Promotions & Offers at Fashion_Store:</h6>
+                <h6 class="header font-weight-bold">Promotions & Offers at Spring_Store:</h6>
                 <ul>
                   <li><b>Delivery support </b>for orders from 350.000đ in HCMC và 600.000đ ở
                     Other Province/City <a href="#" style="display: none">Detail</a></li>
