--- a/src/main/webapp/WEB-INF/templates/admin/category.html
+++ b/src/main/webapp/WEB-INF/templates/admin/category.html
@@ -16,38 +16,36 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Danh mục</h1>
+                <h1 class="mt-4">Category</h1>
                 <ol class="breadcrumb mb-4">
                 </ol>
 
                 <div class="card mb-4">
                     <div class="card-header">
                         <div th:if="${msg == '1'}" class="alert alert-success">
-                            <strong>Thành công!</strong>
+                            <strong>Successful!!</strong>
                         </div>
                         <div th:if="${msg == '2'}" class="alert alert-danger">
-                            <strong>Danh mục đã tồn tại !</strong>
+                            <strong>Category already exists !</strong>
                         </div>
                         <button type="button" class="btn btn-success" style="width: 100px" data-bs-toggle="modal"
                                 data-bs-target="#exampleModalAdd">
-                            Thêm mới
+                            Create
                         </button>
                     </div>
                     <div class="card-body">
                         <table id="datatablesSimple">
                             <thead>
                             <tr style="background-color: gray !important;">
-                                <th>STT</th>
-                                <th>Tên</th>
-                                <th>Hoạt động</th>
+                                <th>NO</th>
+                                <th>Name</th>
+                                <th>Action</th>
 
                             </tr>
                             </thead>
                             <tfoot>
                             <tr>
-                                <th>ID</th>
-                                <th>Tên</th>
-                                <th>Hoạt động</th>
+
                             </tr>
                             </tfoot>
                             <tbody>
@@ -58,10 +56,10 @@
                                     <td>
                                         <button style="width: 100px" type="button" class="btn btn-primary" data-bs-toggle="modal"
                                                 th:data-bs-target="'#exampleModal'+${category.id}">
-                                            Sửa
+                                            Update
                                         </button>
                                         <a style="width: 100px" th:href="'category/delete/'+ ${category.id}" class="btn btn-danger">
-                                            Xóa
+                                            Delete
                                         </a>
                                     </td>
                                 </tr>
@@ -71,7 +69,7 @@
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Cập nhập</h5>
+                                                <h5 class="modal-title" id="exampleModalLabel">Update</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -79,12 +77,12 @@
                                                 <form th:action="'category/update/'+ ${category.id}" method="post">
                                                     <div class="mb-3">
                                                         <label for="category-film"
-                                                               class="col-form-label">Tên:</label>
+                                                               class="col-form-label">Name:</label>
                                                         <input required type="text" th:value="${category.name}" name="name" class="form-control" id="category-film">
                                                         <input type="hidden" th:value="${category.id}" name="id" class="form-control" id="category-film">
                                                     </div>
                                                     <div class="" style="display: none">
-                                                        <label  class="col-form-label">Danh mục cha:</label><br>
+                                                        <label  class="col-form-label">Parent Category:</label><br>
                                                         <select class="form-control" name="parentId" required>
                                                             <option th:value="${category.parentId}" th:text="${category.parentId}">--Choose Category--</option>
                                                             <th:block th:each="category,index : ${categorys}">
@@ -94,8 +92,8 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary"
-                                                                data-bs-dismiss="modal">Đóng</button>
-                                                        <button type="submit" class="btn btn-primary">Lưu</button>
+                                                                data-bs-dismiss="modal">Close</button>
+                                                        <button type="submit" class="btn btn-primary">Save</button>
                                                     </div>
                                                 </form>
                                             </div>
@@ -110,7 +108,7 @@
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Thêm mới</h5>
+                                            <h5 class="modal-title" id="exampleModalLabel">Create</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     aria-label="Close"></button>
                                         </div>
@@ -118,13 +116,13 @@
                                             <form action="/admin/category/add" method="post">
                                                 <div class="mb-3">
                                                     <label for="category-film"
-                                                           class="col-form-label">Tên:</label>
+                                                           class="col-form-label">Name:</label>
                                                     <input required type="text" class="form-control" name="name" id="category-film">
                                                 </div>
                                                 <div class="">
-                                                    <label  class="col-form-label">Danh mục cha:</label><br>
+                                                    <label  class="col-form-label">Parent Category:</label><br>
                                                     <select class="form-control" name="parentId" >
-                                                        <option value="" selected>--Chọn vị trí --</option>
+                                                        <option value="" selected>--Choose location--</option>
                                                         <option value="0" >Menu</option>
                                                         <th:block th:each="category,index : ${categorycha}">
                                                             <option th:value="${category.id}" th:text="${category.name}"></option>
@@ -133,8 +131,8 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary"
-                                                            data-bs-dismiss="modal">Đóng</button>
-                                                    <button type="submit" class="btn btn-primary">Thêm </button>
+                                                            data-bs-dismiss="modal">Close</button>
+                                                    <button type="submit" class="btn btn-primary">Save </button>
                                                 </div>
                                             </form>
                                         </div>
@@ -152,7 +150,7 @@
         <footer th:replace="admin/fragments :: footer" class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                    <div class="text-muted">Copyright &copy; Your Website 2022</div>
                     <div>
                         <a href="#">Privacy Policy</a>
                         &middot;
